Removed salmon color from sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,9 @@ nav {
     background-color: navajowhite;
 }
 
-section {
+/* section {
     background-color: salmon;
-}
+} */
 
 h2 {
     background-color: honeydew;
